
 OpenSSL CHANGES
 _______________

 Changes between 0.9.8e and 0.9.8f-fips  [xx XXX xxxx]

  *) New flag in EVP_CIPHER: EVP_CIPH_FLAG_DEFAULT_ASN1. This will
     automatically use EVP_CIPHER_{get,set}_asn1_iv and avoid the
     need for any ASN1 dependencies in FIPS library. Move AES and 3DES
     cipher definitions to fips library and modify AES and 3DES algorithm
     tests and self tests to use EVP.
     [Steve Henson]

  *) Move EVP cipher code into enc_min.c to support a minimal implementation
     for use by FIPS applications.
     [Steve Henson]

  *) Add algorithm config module. Currently just handles setting FIPS mode.
     [Steve Henson]

  *) Rewrite self tests and pairwise tests to use EVP. Add more extensive
     self tests for RSA in all digests and modes.
     [Steve Henson]

  *) New flags RSA_FIPS_METHOD and DSA_FIPS_METHOD to indicate a method is
     allowed in FIPS mode. Disable direct low level RSA and DSA signature
     operations in FIPS mode so all operations have to be made via EVP.
     [Steve Henson]

  *) New flag EVP_MD_FLAG_SVCTX which passes EVP_MD_CTX and key to underlying
     sign/verify method. This permits the method to perform finalization
     and signing itself and have access to the EVP_MD_CTX structure in case
     additional parameters are needed. Modify fips_{dsa,rsa}_{sign,verify}
     to use EVP_MD_FLAG_SVCTX and support PSS and X9.31 RSA modes.
     Modify RSA algorithm test programs to use new parameters.
     [Steve Henson]

  *) Add small standalone ASN1 encoder/decoder to handle DSA signature format.
     Modify test, algorithm test and selftest routines to use EVP for DSA.
     Move FIPS implementation of EVP_sha*() and EVP_dss1() under fips-1.0.
     [Steve Henson]

  *) Modify VC++ build system to rename .text and .rdata segments in
     FIPS sources to .fipst${a,b,c}, and $fipsr${a,b,c} and place them
     in a static library fipscanister.lib using a perl script. These are